
namespace java no.mechatronics.sfi.fmu_proxy.thrift

service ThriftFmuService {

    string getGuid()
    string getModelName()

}